# autoTrading

./: README.md  pyproject.toml
app/: main.py  schemas.py
app/services/: backtest.py  data_provider.py  indicators.py
app/static/: app.js  index.html  style.css
scripts/: run.ps1  run_wsl.sh  setup.ps1  setup_wsl.sh  test.ps1  test_wsl.sh
tests/: test_api.py  test_backtest_service.py
