[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "us-portfolio-backtester"
version = "0.1.0"
description = "FastAPI app for backtesting US stock portfolios."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "yfinance>=0.2.54,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

